Fix notification z-index.

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -1,3 +1,7 @@
+.ant-notification {
+	z-index: 3000;
+}
+
 .layout {
   margin-left: 300px;
 }
